kubernetes/deploy/proxies/internal/sonarr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: sonarr
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`sonarr.vandeneede.org`)
    services:
    - name: sonarr
      port: 8989
